# openscreen

./: .clang-format-ignore  .gitignore  .gitmodules  .gn  .vpython3  BUILD.gn  DEPS  OWNERS  PRESUBMIT.py  README.md
.github/workflows/: main.yml
build_overrides/: build.gni
cast/: README.md  standalone_e2e.py
cast/common/: BUILD.gn
cast/docs/: USING.md  architecture.md  architecture_responsibilities.dot  dscp.md  external_libraries.md  frame_flow_tracing.md  generate_images.sh  input_demo.md  protocol_flow.md
cast/protocol/: BUILD.gn  streaming_session_protocol.md
cast/receiver/: BUILD.gn  application_agent.cc  application_agent.h  application_agent_unittest.cc
cast/sender/: BUILD.gn  cast_app_discovery_service_impl.cc  cast_app_discovery_service_impl.h  cast_platform_client.cc  cast_platform_client.h  cast_platform_client_unittest.cc
cast/standalone_common/: BUILD.gn  ffmpeg_glue.cc  ffmpeg_glue.h
cast/standalone_receiver/: BUILD.gn  DEPS  avcodec_glue.h  cast_service.cc  cast_service.h  decoder.cc  decoder.h  dummy_player.cc  dummy_player.h  main.cc  mirroring_application.cc  mirroring_application.h  sdl_audio_player.cc  sdl_glue.cc  sdl_glue.h  sdl_player_base.cc  sdl_player_base.h  sdl_video_player.cc  simple_remoting_receiver.h  streaming_playback_controller.cc  streaming_playback_controller.h
cast/standalone_sender/: BUILD.gn  DEPS  connection_settings.h  ffmpeg_glue.h  looping_file_cast_agent.cc  looping_file_cast_agent.h  looping_file_sender.cc  looping_file_sender.h  main.cc  receiver_chooser.cc  remoting_sender.h  simulated_capturer.cc  simulated_capturer.h  streaming_av1_encoder.cc  streaming_av1_encoder.h  streaming_opus_encoder.cc  streaming_opus_encoder.h  streaming_video_encoder.h  streaming_vpx_encoder.cc  streaming_vpx_encoder.h
cast/standalone_sender/bindings/python/: BUILD.gn  cast_runtime.cc  cast_runtime.h  cast_runtime_unittest.cc  get_python_include.py  python_bindings.cc  sender_bridge.cc  sender_bridge.h  sender_bridge_unittest.cc
cast/streaming/: BUILD.gn  DEPS  README.md  external_libraries.gni  external_libraries.md  input.proto  message_fields.h  resolution.cc  resolution.h  sender_message.cc  sender_message.h  sender_packet_router.cc  sender_packet_router.h  sender_packet_router_unittest.cc
cast/test/: BUILD.gn  cast_socket_e2e_test.cc  device_auth_test.cc
discovery/: BUILD.gn  README.md
docs/: advanced_gerrit.md  code_coverage.md  continuous_build.md  cross_compilation.md  discovery.md  fuzzing.md  roll_deps.md  style_guide.md  threading.md  trace_logging.md
gni/: openscreen.gni
osp/: BUILD.gn
platform/: BUILD.gn  README.md
test/: test_main.cc
tools/: cli_utils.py  convert_to_data_file.py  curlish.py  download-chromium-file.py  roll_protobuf.py  roll_protobuf.sh  roll_protobuf_test.py
util/: BUILD.gn  DEPS  alarm.cc  alarm.h  big_endian.cc  big_endian.h  big_endian_unittest.cc  bit_vector.cc  bit_vector.h  bit_vector_unittest.cc  flat_map.h  flat_map_unittest.cc  hashing.h  no_destructor.h  raw_ptr.h  raw_ptr_unittest.cc  raw_ref.h  raw_ref_unittest.cc  scoped_wake_lock_mac.cc  simple_fraction.cc  std_util.h  std_util_unittest.cc  string_util.cc  string_util.h  string_util_unittest.cc  stringprintf.cc  stringprintf.h  stringprintf_unittest.cc  thread_annotations.h  trace_logging.h  trace_logging_unittest.cc  uuid.cc  uuid.h  uuid_unittest.cc  yet_another_bit_vector.cc
(+366 files in other folders)
