# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")

import("//gni/openscreen.gni")

declare_args() {
  python_include_dir = ""
}

if (python_include_dir == "") {
  python_include_dir = exec_script("get_python_include.py", [], "trim string")
}

openscreen_shared_library("cast_sender_python_bindings") {
  testonly = true
  output_prefix_override = true
  output_name = "cast_sender"

  public = [
    "cast_runtime.h",
    "sender_bridge.h",
  ]

  sources = [
    "cast_runtime.cc",
    "python_bindings.cc",
    "sender_bridge.cc",
  ]

  deps = [
    "//cast/common:certificate",
    "//cast/common:channel",
    "//cast/common:public",
    "//cast/sender:channel",
    "//cast/standalone_sender:cast_sender_core",
    "//cast/streaming:sender",
    "//platform",
    "//platform:standalone_impl",
    "//third_party/abseil",
    "//third_party/boringssl",
    "//third_party/jsoncpp",
    "//third_party/protobuf:protobuf_lite",
    "//third_party/pybind11",
    "//util",
  ]

  libs = [
    "avcodec",
    "avformat",
    "avutil",
    "swresample",
    "opus",
    "vpx",
  ]

  include_dirs = [ python_include_dir ]

  remove_configs = [
    "//build/config/compiler:no_exceptions",
    "//build/config/compiler:no_rtti",
    "//build/config/compiler:no_unresolved_symbols",
    "//:features",
  ]

  configs = [
    "//build/config/compiler:exceptions",
    "//build/config/compiler:rtti",
  ]

  if (is_clang) {
    cflags = [
      "-Wno-error=exit-time-destructors",
      "-Wno-error=range-loop-bind-reference",
    ]
  }

  ldflags = []

  if (is_linux) {
    # Linux-specific linker flags
    ldflags += [
      "-Wl,-z,undefs",
      "-Wl,-rpath,\$ORIGIN",
      "-Wl,-rpath,\$ORIGIN/lib",
    ]
  } else if (is_mac) {
    # macOS-specific linker flags
    ldflags += [
      "-Wl,-undefined,dynamic_lookup",
      "-Wl,-rpath,@loader_path",
      "-Wl,-rpath,@loader_path/lib",
    ]
  }
}

openscreen_source_set("unittests") {
  testonly = true
  visibility = [ "//:openscreen_unittests_all" ]
  public_deps = [
    "//platform:test",
    "//third_party/googletest:gtest",
  ]
  sources = [
    "cast_runtime.cc",
    "cast_runtime.h",
    "cast_runtime_unittest.cc",
    "sender_bridge.cc",
    "sender_bridge.h",
    "sender_bridge_unittest.cc",
  ]
  deps = [
    "//cast/common:public",
    "//cast/standalone_sender:cast_sender_core",
    "//platform",
    "//platform:standalone_impl",
  ]
}
